2010-12-21  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin Adler.

        Include the shadow color space as part of the GraphicsContext state
        https://bugs.webkit.org/show_bug.cgi?id=51420
        
        Include the ColorSpace for the shadow color as part of the graphics
        state. This will be used later for a shadow implementation that
        does not rely on platform shadow code.

        * platform/graphics/GraphicsContext.cpp:
        (WebCore::GraphicsContext::setShadow):
        (WebCore::GraphicsContext::clearShadow):
        (WebCore::GraphicsContext::getShadow):
        * platform/graphics/GraphicsContext.h:
        (WebCore::GraphicsContextState::GraphicsContextState):
        * platform/graphics/chromium/FontChromiumWin.cpp:
        (WebCore::TransparencyAwareFontPainter::TransparencyAwareGlyphPainter::drawGlyphs):
        (WebCore::Font::drawComplexText):
        * platform/graphics/mac/FontMac.mm:
        (WebCore::Font::drawGlyphs):
        * platform/graphics/skia/SkiaFontWin.cpp:
        (WebCore::windowsCanHandleDrawTextShadow):
        * platform/graphics/win/FontCGWin.cpp:
        (WebCore::drawGDIGlyphs):
        (WebCore::Font::drawGlyphs):
        * platform/graphics/wince/GraphicsContextWinCE.cpp:
        (WebCore::GraphicsContext::fillRoundedRect):
        (WebCore::GraphicsContext::drawText):

2010-12-21  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/8668230> REGRESSION (r71884): Returning alternate requests from willSendRequest can prevent other requests from ever being sent
        https://bugs.webkit.org/show_bug.cgi?id=51413

        71884 was wrong in moving willSendRequest to ResourceLoader::start(). It’s wrong to do all the
        scheduling, which is host-dependent, before calling willSendRequest, because the latter can
        change the host.

        * loader/NetscapePlugInStreamLoader.cpp: