@@ -58,13 +58,11 @@ String HTMLImageLoader::sourceURI(const AtomicString& attr) const
 {
 #if ENABLE(DASHBOARD_SUPPORT)
     Settings* settings = element()->document()->settings();
-    if (!settings || !settings->usesDashboardBackwardCompatibilityMode())
-        return stripLeadingAndTrailingHTMLSpaces(attr);
+    if (settings && settings->usesDashboardBackwardCompatibilityMode() && attr.length() > 7 && attr.startsWith("url(\"") && attr.endsWith("\")"))
+        return attr.string().substring(5, attr.length() - 7);
 #endif
-    if (attr.length() < 7 || !attr.startsWith("url(\"") || !attr.endsWith("\")"))
-        return stripLeadingAndTrailingHTMLSpaces(attr);
 
-    return attr.string().substring(5, attr.length() - 7);
+    return stripLeadingAndTrailingHTMLSpaces(attr);
 }
 
 void HTMLImageLoader::notifyFinished(CachedResource*)
